2019-07-23  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Cleanup after using G_DECLARE_FINAL_TYPE()

	* libbalsa/mailbox_imap.c: drop redundant class struct
	declaration;
	* libbalsa/mailbox_maildir.c: ditto;
	* libbalsa/mailbox_mbox.c: ditto;
	* libbalsa/mailbox_mh.c: ditto;
	* libbalsa/mailbox_pop3.c: ditto;
	* libbalsa/message.c: ditto;
	* src/ab-window.c: ditto;
	* src/balsa-cite-bar.c: ditto; drop parant_class variable;
	  (balsa_cite_bar_class_init): no more parent_class.

2019-07-23  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* libbalsa/libbalsa-gpgme-widgets.c (create_uid_str): Do not
	leak an empty string.

2019-07-23  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* src/balsa-message.c (balsa_message_destroy): Do not leak
	BalsaMessage::face_box.

2019-07-22  Peter Bloomfield  <pbloomfield@bellsouth.net>

	balsa-message: Use modern macros to declare and define.

	Make BalsaMessage opaque, and provide and use necessary accessors.

	* src/balsa-message.c (balsa_part_info_class_init),
	(balsa_message_class_init), (balsa_message_destroy),
	(balsa_part_info_init), (balsa_part_info_new),
	(balsa_part_info_dispose), (balsa_part_info_finalize),
	(balsa_message_get_wrap_text), (balsa_message_get_focus_state),
	(balsa_message_get_scroll), (balsa_message_get_bm_widget),
	(balsa_message_get_message), (balsa_message_get_shown_headers),
	(balsa_message_get_face_box), (balsa_message_get_tree_view),
	(balsa_message_set_focus_state), (balsa_message_set_face_box):
	* src/balsa-message.h:
	* src/balsa-mime-widget-callbacks.c (scroll_change),
	(balsa_mime_widget_key_press_event),
	(balsa_mime_widget_limit_focus), (balsa_mime_widget_unlimit_focus):
	* src/balsa-mime-widget-message.c (balsa_mime_widget_new_message),
	(bm_header_widget_new), (add_header_address_list),
	(bmw_message_set_headers_d),
	(balsa_mime_widget_message_set_headers),
	(balsa_mime_widget_message_set_headers_d):
	* src/balsa-mime-widget-text.c (balsa_mime_widget_new_text),
	(check_text_encoding):